# UniWebExt

./: CMakeLists.txt  README.md
babel-package/: package.json
extension/: CMakeLists.txt  background.js
extension/google-chrome/: manifest.json
extension/icons/: license.txt
extension/mozilla/: manifest.json
