#
# UniWebExt
#
CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(UniWebExt VERSION 0.1.0.0)

# global settings
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/install" CACHE PATH "..." FORCE)
ENDIF()

STRING(TIMESTAMP PROJECT_TIMESTAMP UTC)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

# version strings
SET(PROJECT_VERSION_STR "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

# npm, npx - works on Windows only
FIND_PROGRAM( CMD_NPM "npm.cmd")
FIND_PROGRAM( CMD_NPX "npx.cmd")

# subdirectories
ADD_SUBDIRECTORY(babel-package)
ADD_SUBDIRECTORY(extension)

